# borrowed_book_reminder

./: .gitignore  README-FR.md  README.md  main.py  pyproject.toml
config/: __init__.py  settings.py
mediatheque/: api.py  auth.py
nextcloud/: __init__.py  calendar.py
utils/: __init__.py  logger.py  utils.py
